--- a/sso-web/src/main/resources/templates/register.html
+++ b/sso-web/src/main/resources/templates/register.html
@@ -115,20 +115,19 @@
 
 
 	<!--All jQuery, Third Party Plugins Activation (main.js) Files-->
-	<script src="js/modernizr-3.6.0.min.js" type="text/javascript"></script>
+	<script src="js/modernizr-3.6.0.min.js" th:src="@{/js/modernizr-3.6.0.min.js}" type="text/javascript"></script>
 	<!-- Jquery Min Js -->
-	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+	<script src="js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}" type="text/javascript"></script>
 	<!-- Popper Min Js -->
-	<script src="js/popper.min.js" type="text/javascript"></script>
+	<script src="js/popper.min.js" th:src="@{/js/popper.min.js}"type="text/javascript"></script>
 	<!-- Bootstrap Min Js -->
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"type="text/javascript"></script>
 	<!-- Plugins Js-->
-	<script src="js/plugins.js" type="text/javascript"></script>
-	<!-- Ajax Mail Js -->
-	<script src="js/ajax-mail.js" type="text/javascript"></script>
+	<script src="js/plugins.js" th:src="@{/js/plugins.js}" type="text/javascript"></script>
 	<!-- Active Js -->
-	<script src="js/main.js" type="text/javascript"></script>
-	<script src="layer/layer.js" type="text/javascript"></script>
+	<script src="js/main.js" th:src="@{/js/main.js}"type="text/javascript"></script>
+	
+	<script src="layer/layer.js" th:src="@{/layer/layer.js}"type="text/javascript"></script>
 	<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
 	<script type="text/javascript">
 	var REGISTER={
