--- a/item-web/src/main/resources/templates/item-phone.html
+++ b/item-web/src/main/resources/templates/item-phone.html
@@ -101,12 +101,12 @@
                                             <a href="#" data-toggle="tooltip" data-placement="top" title="不好使，别点了"><i class="fa fa-refresh"></i>刷新</a>
                                             <a href="#" data-toggle="tooltip" data-placement="top" title="也不好使"><i class="fa fa-heart-o"></i>加入心愿单</a>
                                         </div>
-                                        <div class="share-icon mt-20">
-                                            <a class="facebook" href="#"><i class="fa fa-facebook"></i>like</a>
-                                            <a class="twitter" href="#"><i class="fa fa-twitter"></i>tweet</a>
-                                            <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>save</a>
-                                            <a class="google" href="#"><i class="fa fa-google-plus"></i>share</a>
-                                        </div>
+<!--                                         <div class="share-icon mt-20"> -->
+<!--                                             <a class="facebook" href="#"><i class="fa fa-facebook"></i>like</a> -->
+<!--                                             <a class="twitter" href="#"><i class="fa fa-twitter"></i>tweet</a> -->
+<!--                                             <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>save</a> -->
+<!--                                             <a class="google" href="#"><i class="fa fa-google-plus"></i>share</a> -->
+<!--                                         </div> -->
                                     </div>
                                 </div>
                             </div>
