--- a/portal-web/src/main/resources/templates/header-mobile.html
+++ b/portal-web/src/main/resources/templates/header-mobile.html
@@ -23,10 +23,10 @@
 							<nav>
 								<ul>
 									<li id="loginbar" style="margin-right: 15px;">
-										<a href="http://localhost:8080/login-register">请登录</a>
+										<a href="http://sso.view.solarcat.cn/login-register">请登录</a>
 									</li>
 									<li>
-										<a href="http://localhost:8080/login-register">免费注册</a>
+										<a href="http://sso.view.solarcat.cn/login-register">免费注册</a>
 									</li>
 									<li>
 										<div class="dropdown header-top-dropdown">
