--- a/portal-web/src/main/resources/templates/team.html
+++ b/portal-web/src/main/resources/templates/team.html
@@ -33,7 +33,7 @@
         <div th:insert="~{header :: header}"></div>
         <!-- header area end -->
 
-        <!-- hero slider start -->
+        <!-- 轮播图 -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -49,8 +49,8 @@
                                             <div class="slider-label">
                                                 <img src="/images/slider11_lable4.png" alt="">
                                             </div>
-                                            <h1>headphones az12</h1>
-                                            <p>Typi Non Habent Claritatem Insitam; Est Usus Legentis</p>
+                                            <h1></h1>
+                                            <p></p>
                                         </div>
                                     </div>
                                 </div>
@@ -67,8 +67,8 @@
                                             <div class="slider-label">
                                                 <img src="/images/slider11_lable4.png" alt="">
                                             </div>
-                                            <h1>samson s90</h1>
-                                            <p>Typi Non Habent Claritatem Insitam; Est Usus Legentis</p>
+                                            <h1></h1>
+                                            <p></p>
                                         </div>
                                     </div>
                                 </div>
@@ -85,8 +85,8 @@
                                             <div class="slider-label">
                                                 <img src="/images/slider11_lable4.png" alt="">
                                             </div>
-                                            <h1>samson s90</h1>
-                                            <p>Typi Non Habent Claritatem Insitam; Est Usus Legentis</p>
+                                            <h1></h1>
+                                            <p></p>
                                         </div>
                                     </div>
                                 </div>
@@ -96,9 +96,9 @@
                 </div>
             </div>
         </div>
-        <!-- hero slider end -->
+        <!-- 轮播图 -->
 
-        <!-- home banner area start -->
+        <!-- 小广告图 -->
         <div class="banner-area mt-30">
             <div class="container">
                 <div class="row">
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <!-- home banner area end -->
+        <!-- 小广告图 -->
 
         <!-- page wrapper start -->
         <div class="page-wrapper pt-6 pb-28 pb-md-6 pb-sm-6 pt-xs-36">
@@ -140,137 +140,6 @@
                     <!-- start home sidebar -->
                     <div class="col-lg-3">
                         <div class="home-sidebar">
-                            <!-- hot deals area start -->
-                            <div class="main-sidebar hot-deals-wrap mb-30">
-                                <div class="section-title-2 d-flex justify-content-between mb-28">
-                                    <h3>hot deals</h3>
-                                    <div class="slick-append"></div>
-                                </div> <!-- section title end -->
-                                <div class="deals-carousel-active slick-padding slick-arrow-style">
-                                    <!-- product single item start -->
-                                    <div class="product-item fix">
-                                        <div class="product-thumb">
-                                            <a href="product-details.html">
-                                                <img src="/images/product-img7.jpg" class="img-pri" alt="">
-                                                <img src="/images/product-img13.jpg" class="img-sec" alt="">
-                                            </a>
-                                            <div class="product-label">
-                                                <span>hot</span>
-                                            </div>
-                                            <div class="product-action-link">
-                                                <a href="#" data-toggle="modal" data-target="#quick_view"> <span
-                                                        data-toggle="tooltip" data-placement="left" title="Quick view"><i
-                                                            class="fa fa-search"></i></span> </a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Wishlist"><i
-                                                        class="fa fa-heart-o"></i></a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Compare"><i
-                                                        class="fa fa-refresh"></i></a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Add to cart"><i
-                                                        class="fa fa-shopping-cart"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="product-content">
-                                            <h4><a href="product-details.html">vertual product 01</a></h4>
-                                            <div class="pricebox">
-                                                <span class="regular-price">$70.00</span>
-                                                <div class="ratings">
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span><i class="fa fa-star"></i></span>
-                                                    <div class="pro-review">
-                                                        <span>1 review(s)</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- product single item end -->
-                                    <!-- product single item start -->
-                                    <div class="product-item fix">
-                                        <div class="product-thumb">
-                                            <a href="product-details.html">
-                                                <img src="/images/product-img3.jpg" class="img-pri" alt="">
-                                                <img src="/images/product-img4.jpg" class="img-sec" alt="">
-                                            </a>
-                                            <div class="product-label">
-                                                <span>hot</span>
-                                            </div>
-                                            <div class="product-action-link">
-                                                <a href="#" data-toggle="modal" data-target="#quick_view"> <span
-                                                        data-toggle="tooltip" data-placement="left" title="Quick view"><i
-                                                            class="fa fa-search"></i></span> </a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Wishlist"><i
-                                                        class="fa fa-heart-o"></i></a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Compare"><i
-                                                        class="fa fa-refresh"></i></a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Add to cart"><i
-                                                        class="fa fa-shopping-cart"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="product-content">
-                                            <h4><a href="product-details.html">vertual product 01</a></h4>
-                                            <div class="pricebox">
-                                                <span class="regular-price">$70.00</span>
-                                                <div class="ratings">
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span><i class="fa fa-star"></i></span>
-                                                    <div class="pro-review">
-                                                        <span>1 review(s)</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- product single item end -->
-                                    <!-- product single item start -->
-                                    <div class="product-item fix">
-                                        <div class="product-thumb">
-                                            <a href="product-details.html">
-                                                <img src="/images/product-img5.jpg" class="img-pri" alt="">
-                                                <img src="/images/product-img1.jpg" class="img-sec" alt="">
-                                            </a>
-                                            <div class="product-label">
-                                                <span>hot</span>
-                                            </div>
-                                            <div class="product-action-link">
-                                                <a href="#" data-toggle="modal" data-target="#quick_view"> <span
-                                                        data-toggle="tooltip" data-placement="left" title="Quick view"><i
-                                                            class="fa fa-search"></i></span> </a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Wishlist"><i
-                                                        class="fa fa-heart-o"></i></a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Compare"><i
-                                                        class="fa fa-refresh"></i></a>
-                                                <a href="#" data-toggle="tooltip" data-placement="left" title="Add to cart"><i
-                                                        class="fa fa-shopping-cart"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="product-content">
-                                            <h4><a href="product-details.html">vertual product 01</a></h4>
-                                            <div class="pricebox">
-                                                <span class="regular-price">$70.00</span>
-                                                <div class="ratings">
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span class="good"><i class="fa fa-star"></i></span>
-                                                    <span><i class="fa fa-star"></i></span>
-                                                    <div class="pro-review">
-                                                        <span>1 review(s)</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- product single item end -->
-                                </div>
-                            </div>
-                            <!-- hot deals area end -->
-
                             <!-- testimonial area start -->
                             <div class="main-sidebar testimonial-area pb-sm-70">
                                 <div class="section-title-2 mb-28">
