--- a/sso-web/src/main/resources/templates/login-phone.html
+++ b/sso-web/src/main/resources/templates/login-phone.html
@@ -9,23 +9,16 @@
 <meta name="description" content="meta description">
 
 <title>欢迎登陆-solarcat</title>
-<link rel="icon" href="images/solar.ico">
+<link rel="icon" href="images/solar.ico" type="image/x-icon">
 <!-- Bootstrap CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Font-Awesome CSS -->
 <link href="css/font-awesome.min.css" rel="stylesheet">
-<!-- helper class css -->
-<link href="css/helper.min.css" rel="stylesheet">
-<!-- Plugins CSS -->
-<link href="css/plugins.css" rel="stylesheet">
 <!-- Main Style CSS -->
-<link href="css/style.css" rel="stylesheet">
-<link href="css/skin-default.css" rel="stylesheet" id="galio-skin">
+<link href="css/index.css" rel="stylesheet">
 </head>
 
 <body>
-
-<!-- 	<div th:insert="~{header :: header}"></div> -->
 	<div class="wrapper box-layout">
 
 		<!-- breadcrumb area start -->
@@ -87,34 +80,15 @@
 			</div>
 		</div>
 		<!-- login register wrapper end -->
-
-		<!-- brand area start -->
-
-		<!-- brand area end -->
-		<!-- footer area start -->
-<!-- 		<div th:insert="~{footer :: footer}"></div> -->
-		<!-- footer area end -->
 	</div>
-
-	<!-- Scroll to top start -->
-	<div class="scroll-top not-visible">
-		<i class="fa fa-angle-up"></i>
-	</div>
-	<!-- Scroll to Top End -->
-
 
 	<!--All jQuery, Third Party Plugins Activation (main.js) Files-->
 	<script src="js/modernizr-3.6.0.min.js" th:src="@{/js/modernizr-3.6.0.min.js}" type="text/javascript"></script>
-	<!-- Jquery Min Js -->
-	<script src="js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<!-- Popper Min Js -->
 	<script src="js/popper.min.js" th:src="@{/js/popper.min.js}"type="text/javascript"></script>
 	<!-- Bootstrap Min Js -->
-	<script src="js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"type="text/javascript"></script>
-	<!-- Plugins Js-->
-	<script src="js/plugins.js" th:src="@{/js/plugins.js}" type="text/javascript"></script>
-	<!-- Active Js -->
-	<script src="js/main.js" th:src="@{/js/main.js}"type="text/javascript"></script>
+	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
 	<script src="layer/layer.js" th:src="@{/layer/layer.js}"type="text/javascript"></script>
 	<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
@@ -133,7 +107,7 @@
 				$.post("/user/login", $("#formlogin").serialize(),function(data){
 					if (data.status == 200) {
 						layer.alert('登录成功！',"提示", function(){
-							location.href = "http://localhost:8087/user-info";
+							location.href = "http://view.solarcat.cn/index";
 						});
 
 					} else {
