--- a/sso-web/src/main/resources/templates/login.html
+++ b/sso-web/src/main/resources/templates/login.html
@@ -31,10 +31,10 @@
 						<div class="breadcrumb-wrap">
 							<nav aria-label="breadcrumb">
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item">
+									<li>
 										<a href="http://view.solarcat.cn/index">首页</a>
 									</li>
-									<li class="breadcrumb-item active" aria-current="page">登陆-注册页</li>
+									<li class="active" aria-current="page">登陆-注册页</li>
 								</ul>
 							</nav>
 						</div>
@@ -89,13 +89,8 @@
 
 
 	<!--All jQuery, Third Party Plugins Activation (main.js) Files-->
-	<script src="js/modernizr-3.6.0.min.js" th:src="@{/js/modernizr-3.6.0.min.js}" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<!-- Popper Min Js -->
-	<script src="js/popper.min.js" th:src="@{/js/popper.min.js}"type="text/javascript"></script>
-	<!-- Bootstrap Min Js -->
-	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+
 	<script src="layer/layer.js" th:src="@{/layer/layer.js}"type="text/javascript"></script>
 	<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
 	<script type="text/javascript">
