--- a/sso-web/src/main/resources/templates/register-phone.html
+++ b/sso-web/src/main/resources/templates/register-phone.html
@@ -9,18 +9,13 @@
 <meta name="description" content="meta description">
 
 <title>欢迎登陆-solarcat</title>
-<link rel="icon" href="images/solar.ico">
+<link rel="icon" href="images/solar.ico" type="image/x-icon">
 <!-- Bootstrap CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 <!-- Font-Awesome CSS -->
 <link href="css/font-awesome.min.css" rel="stylesheet">
-<!-- helper class css -->
-<link href="css/helper.min.css" rel="stylesheet">
-<!-- Plugins CSS -->
-<link href="css/plugins.css" rel="stylesheet">
 <!-- Main Style CSS -->
-<link href="css/style.css" rel="stylesheet">
-<link href="css/skin-default.css" rel="stylesheet" id="galio-skin">
+<link href="css/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -99,35 +94,11 @@
 		</div>
 		<!-- login register wrapper end -->
 
-		<!-- brand area start -->
-
-		<!-- brand area end -->
-		<!-- footer area start -->
-		<div th:insert="~{footer :: footer}"></div>
-		<!-- footer area end -->
 	</div>
 
-	<!-- Scroll to top start -->
-	<div class="scroll-top not-visible">
-		<i class="fa fa-angle-up"></i>
-	</div>
-	<!-- Scroll to Top End -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous" type="text/javascript"></script>
 
-
-	<!--All jQuery, Third Party Plugins Activation (main.js) Files-->
-	<script src="js/modernizr-3.6.0.min.js" th:src="@{/js/modernizr-3.6.0.min.js}" type="text/javascript"></script>
-	<!-- Jquery Min Js -->
-	<script src="js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}" type="text/javascript"></script>
-	<!-- Popper Min Js -->
-	<script src="js/popper.min.js" th:src="@{/js/popper.min.js}"type="text/javascript"></script>
-	<!-- Bootstrap Min Js -->
-	<script src="js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"type="text/javascript"></script>
-	<!-- Plugins Js-->
-	<script src="js/plugins.js" th:src="@{/js/plugins.js}" type="text/javascript"></script>
-	<!-- Active Js -->
-	<script src="js/main.js" th:src="@{/js/main.js}"type="text/javascript"></script>
-	
-	<script src="layer/layer.js" th:src="@{/layer/layer.js}"type="text/javascript"></script>
+	<script src="layer/layer.js" th:src="@{/layer/layer.js}" type="text/javascript"></script>
 	<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
 	<script type="text/javascript">
 	var REGISTER={
@@ -189,7 +160,7 @@
 				});
 			},
 			login:function() {
-				location.href = "/login.html";
+				location.href = "http://view.solarcat.cn/login";
 				return false;
 			},
 			reg:function() {
