--- a/portal-web/src/main/resources/templates/header.html
+++ b/portal-web/src/main/resources/templates/header.html
@@ -10,14 +10,7 @@
 		<div class="header-top-area bg-gray text-center text-md-left">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-5">
-						<div class="header-call-action">
-							<i class="fa fa-envelope"></i> 没有邮箱，被骗了不用联系我
-							<a></a>
-							<i class="fa fa-phone"></i> 美女可以给我打电话，不是美女不用给我打电话
-							<a></a>
-						</div>
-					</div>
+					<div class="col-lg-6 col-md-5"></div>
 					<div class="col-lg-6 col-md-7">
 						<div class="header-top-right float-md-right float-none">
 							<nav>
