--- a/portal-web/src/main/resources/templates/team.html
+++ b/portal-web/src/main/resources/templates/team.html
@@ -22,7 +22,6 @@
     <link href="/css/plugins.css" rel="stylesheet">
     <!-- Main Style CSS -->
     <link href="/css/style.css" rel="stylesheet">
-    <link href="/css/skin-default.css" rel="stylesheet" id="galio-skin">
 </head>
 
 <body>
@@ -39,58 +38,28 @@
                 <div class="col-lg-12">
                     <div class="slider-wrapper-area">
                         <div class="hero-slider-active hero__1 slick-dot-style hero-dot">
-                            <div class="single-slider" style="background-image: url(/images/slider12_bg01.jpg);">
-                                <div class="container p-0">
-                                    <div class="slider-main-content">
-                                        <div class="slider-content-img">
-                                        	<!-- 左下角图片 -->
-                                        </div>
-                                        <div class="slider-text">
-                                            <div class="slider-label">
-                                                <img src="/images/slider11_lable4.png" alt="">
-                                            </div>
-                                            <h1></h1>
-                                            <p></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-							<div class="single-slider" style="background-image: url(/images/slider12_bg02.jpg);">
-                                <div class="container p-0">
-                                    <div class="slider-main-content">
-                                        <div class="slider-content-img">
-                                            <img src="/images/slider11_lable1.png" alt="">
-                                            <img src="/images/slider11_lable2.png" alt="">
-                                            <img src="/images/slider11_lable3.png" alt="">
-                                        </div>
-                                        <div class="slider-text">
-                                            <div class="slider-label">
-                                                <img src="/images/slider11_lable4.png" alt="">
-                                            </div>
-                                            <h1></h1>
-                                            <p></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-slider" style="background-image: url(/images/slider12_bg03.jpg);">
-                                <div class="container p-0">
-                                    <div class="slider-main-content">
-                                        <div class="slider-content-img">
-                                            <img src="/images/slider11_lable1.png" alt="">
-                                            <img src="/images/slider11_lable2.png" alt="">
-                                            <img src="/images/slider11_lable3.png" alt="">
-                                        </div>
-                                        <div class="slider-text">
-                                            <div class="slider-label">
-                                                <img src="/images/slider11_lable4.png" alt="">
-                                            </div>
-                                            <h1></h1>
-                                            <p></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="single-slider d-flex align-items-center" style="background-image: url(/images/slider3_bg1.jpg);">
+		                        <div class="container">
+		                            <div class="slider-main-content">
+		                                <div class="slider-text">
+		                                    <h2></h2>
+		                                    <h1>woman</h1>
+		                                    <h5>for less than $199.00</h5>
+		                                </div>
+		                            </div>
+		                        </div>
+		                    </div>
+		                    <div class="single-slider d-flex align-items-center" style="background-image: url(/images/slider3_bg2.jpg);">
+		                        <div class="container">
+		                            <div class="slider-main-content">
+		                                <div class="slider-text">
+		                                    <h2>shopping bag</h2>
+		                                    <h4>fashion collection 2018</h4>
+		                                    <p>for less than $199.00</p>
+		                                </div>
+		                            </div>
+		                        </div>
+		                    </div>
                         </div>
                     </div>
                 </div>
@@ -217,7 +186,7 @@
                                 <div class="col-lg-4">
                                     <div class="category-wrapper mb-md-24 mb-sm-24">
                                         <div class="section-title-2 d-flex justify-content-between mb-28">
-                                            <h3>New Products</h3>
+                                            <h3>精品上新</h3>
                                             <div class="category-append"></div>
                                         </div> <!-- section title end -->
                                         <div class="category-carousel-active row" data-row="4">
