--- a/sso-web/src/main/resources/templates/login.html
+++ b/sso-web/src/main/resources/templates/login.html
@@ -9,15 +9,15 @@
 <meta name="description" content="meta description">
 
 <title>欢迎登陆-solarcat</title>
-<link rel="icon" href="images/solar.ico" type="image/x-icon">
+<link rel="icon" href="/images/solar.ico" type="image/x-icon">
 <!-- Bootstrap CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 <!-- Font-Awesome CSS -->
-<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="/css/font-awesome.min.css" rel="stylesheet">
 <!-- helper class css -->
-<link href="css/helper.min.css" rel="stylesheet">
+<link href="/css/helper.min.css" rel="stylesheet">
 <!-- Main Style CSS -->
-<link href="css/index.css" rel="stylesheet">
+<link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,10 +31,10 @@
 						<div class="breadcrumb-wrap">
 							<nav aria-label="breadcrumb">
 								<ul class="breadcrumb">
-									<li>
+									<li class="breadcrumb-item">
 										<a href="http://view.solarcat.cn/index">首页</a>
 									</li>
-									<li class="active" aria-current="page">登陆-注册页</li>
+									<li class="breadcrumb-item active" aria-current="page">登陆-注册页</li>
 								</ul>
 							</nav>
 						</div>
