--- a/sso-web/src/main/resources/templates/login-phone.html
+++ b/sso-web/src/main/resources/templates/login-phone.html
@@ -9,13 +9,13 @@
 <meta name="description" content="meta description">
 
 <title>欢迎登陆-solarcat</title>
-<link rel="icon" href="images/solar.ico" type="image/x-icon">
+<link rel="icon" href="/images/solar.ico" type="image/x-icon">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <!-- Font-Awesome CSS -->
-<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="/css/font-awesome.min.css" rel="stylesheet">
 <!-- Main Style CSS -->
-<link href="css/index.css" rel="stylesheet">
+<link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body>
