--- a/portal-web/src/main/resources/templates/header-phone.html
+++ b/portal-web/src/main/resources/templates/header-phone.html
@@ -157,7 +157,7 @@
 			</div>
 		</div>
 		<!-- header middle end -->
-		<div th:replace="~{mainmenu :: mainmenu}"></div>
+		<div th:replace="~{mainmenu-phone :: mainmenu-phone}"></div>
 	</header>
 </body>
 </html>
