--- a/portal-web/src/main/resources/templates/team.html
+++ b/portal-web/src/main/resources/templates/team.html
@@ -69,7 +69,49 @@
         <div class="page-wrapper pt-6 pb-28 pb-md-6 pb-sm-6 pt-xs-36">
             <div class="container">
                 <div class="row">
+                    <!-- start home sidebar -->
+                    <div class="col-lg-3">
+                        <div class="home-sidebar">
+                            <!-- testimonial area start -->
+                            <div class="main-sidebar testimonial-area pb-sm-70">
+                                <div class="section-title-2 mb-28">
+                                    <h3>表白墙</h3>
+                                </div> <!-- section title end -->
+                                <div class="testimonial-carousel-active slick-dot-style">
+                                    <div class="testimonial-item text-center">
+                                        <div class="testimonial-thumb">
+                                            <img src="/images/team_member1.jpg" alt="">
+                                        </div>
+                                        <div class="testimonial-content">
+                                            <h3><a href="#">肯不起</a></h3>
+                                            <p>由近50名设计师、工程师、科学家（包括天体物理学家在内）、建筑师及其他专业人员组成的团队，耗时三个月，构思、创作并建造了这一世界上最大的标识。这就是由65000块1平方英尺的彩色瓷砖拼装而成的太空可视肯德基标识。受到全球消费者的欢迎。</p>
+                                        </div>
+                                    </div> <!-- end single testimonial item -->
+                                    <div class="testimonial-item text-center">
+                                        <div class="testimonial-thumb">
+                                            <img src="/images/team_member2.jpg" alt="">
+                                        </div>
+                                        <div class="testimonial-content">
+                                            <h3><a href="#">麦当拿</a></h3>
+                                            <p>麦当劳的黄金准则是“顾客至上，顾客永远第一”。提供服务的最高标准是质量（Quality）、服务（Service）、清洁（Cleanliness）和价值（Value），即QSC&V原则。这是最能体现麦当劳特色的重要原则。</p>
+                                        </div>
+                                    </div> <!-- end single testimonial item -->
+                                    <div class="testimonial-item text-center">
+                                        <div class="testimonial-thumb">
+                                            <img src="/images/team_member3.jpg" alt="">
+                                        </div>
+                                        <div class="testimonial-content">
+                                            <h3><a href="#">买切糕</a></h3>
+                                            <p>切糕是玛仁糖在新疆外地区民众在不知道名称的情况下根据贩卖时的特点所赋予的名称，是一种新疆维吾尔族民众采用传统特色工艺，选用核桃仁、玉米饴、葡萄干、葡萄汁、芝麻、玫瑰花、巴丹杏、枣等原料熬制而成的民族特色食品。</p>
+                                        </div>
+                                    </div> <!-- end single testimonial item -->
+                                </div>
+                            </div>
+                            <!-- testimonial area end -->
 
+                        </div>
+                    </div>
+                    <!-- end home sidebar -->
                     <div class="col-lg-9">
 
                         <!-- banner statistic start -->
@@ -161,11 +203,11 @@
     <!-- Scroll to Top End -->
 
     <!-- Jquery Min Js -->
-    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <!-- Popper Min Js -->
-    <script src="/js/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/popper.js/1.14.7/esm/popper.min.js"></script>
     <!-- Bootstrap Min Js -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Plugins Js-->
     <script src="/js/plugins.js"></script>
     <!-- Active Js -->
