--- a/search-web/src/main/resources/templates/header.html
+++ b/search-web/src/main/resources/templates/header.html
@@ -10,23 +10,16 @@
 		<div class="header-top-area bg-gray text-center text-md-left">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-5">
-						<div class="header-call-action">
-							<i class="fa fa-envelope"></i> 没有邮箱，被骗了不用联系我
-							<a></a>
-							<i class="fa fa-phone"></i> 美女可以给我打电话，不是美女不用给我打电话
-							<a></a>
-						</div>
-					</div>
+					<div class="col-lg-6 col-md-5"></div>
 					<div class="col-lg-6 col-md-7">
 						<div class="header-top-right float-md-right float-none">
 							<nav>
 								<ul>
 									<li id="loginbar" style="margin-right: 15px;">
-										<a href="http://localhost:8080/login-register">请登录</a>
+										<a href="http://sso.view.solarcat.cn/login">请登录</a>
 									</li>
 									<li>
-										<a href="http://localhost:8080/login-register">免费注册</a>
+										<a href="http://sso.view.solarcat.cn/register">免费注册</a>
 									</li>
 									<li>
 										<div class="dropdown header-top-dropdown">
@@ -99,7 +92,7 @@
 							</div>
 							<div class="header-middle-block">
 								<div class="header-middle-searchbox">
-									<form action="http://localhost:8000/search" id="searchForm" name="query" method="GET">
+									<form action="http://search.view.solarcat.cn/search" id="searchForm" name="query" method="GET">
 										<input type="text" class="text keyword ac_input" name="keyword" id="keyword" autocomplete="off" placeholder="搜索商品">
 										<button class="search-btn">
 										<i class="fa fa-search"></i>
