--- a/item-web/src/main/resources/templates/item.html
+++ b/item-web/src/main/resources/templates/item.html
@@ -18,7 +18,6 @@
     <link href="/css/plugins.css" rel="stylesheet">
     <!-- Main Style CSS -->
     <link href="/css/style.css" rel="stylesheet">
-    <link href="/css/skin-default.css" rel="stylesheet" id="galio-skin">
 
 </head>
 <body>
@@ -253,18 +252,17 @@
 
     <!--All jQuery, Third Party Plugins & Activation (main.js) Files-->
     <script src="/js/modernizr-3.6.0.min.js"></script>
-    <!-- Jquery Min Js -->
-    <script src="/js/jquery-3.3.1.min.js"></script>
+    <!--All jQuery, Third Party Plugins Activation (main.js) Files-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Popper Min Js -->
     <script src="/js/popper.min.js"></script>
     <!-- Bootstrap Min Js -->
     <script src="/js/bootstrap.min.js"></script>
     <!-- Plugins Js-->
     <script src="/js/plugins.js"></script>
-    <!-- Ajax Mail Js -->
-    <script src="/js/ajax-mail.js"></script>
     <!-- Active Js -->
     <script src="/js/main.js"></script>
+    <script src="/js/solar_token.js"></script>
     <!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
     
 </body>
