--- a/search-web/src/main/resources/templates/search.html
+++ b/search-web/src/main/resources/templates/search.html
@@ -347,20 +347,18 @@
 
 		<!--All jQuery, Third Party Plugins & Activation (main.js) Files-->
 		<script src="/js/modernizr-3.6.0.min.js" type="text/javascript"></script>
-		<!-- Jquery Min Js -->
-		<script src="/js/jquery-3.3.1.min.js" type="text/javascript"></script>
+		<!--All jQuery, Third Party Plugins Activation (main.js) Files-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<!-- Popper Min Js -->
 		<script src="/js/popper.min.js" type="text/javascript"></script>
 		<!-- Bootstrap Min Js -->
 		<script src="/js/bootstrap.min.js" type="text/javascript"></script>
 		<!-- Plugins Js-->
 		<script src="/js/plugins.js" type="text/javascript"></script>
-		<!-- Ajax Mail Js -->
-		<script src="/js/ajax-mail.js" type="text/javascript"></script>
 		<!-- Active Js -->
 		<script src="/js/main.js" type="text/javascript"></script>
 		<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
-		<script src="layer/layer.js" th:src="@{/layer/layer.js}" type="text/javascript"></script>
+		<script src="/js/solar_token.js"></script>
 		<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
 	</div>
 </body>
