--- a/item-web/src/main/resources/templates/header.html
+++ b/item-web/src/main/resources/templates/header.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" data-th-fragment="header">
+<html xmlns:th="http://www.thymeleaf.org" data-th-fragment="header">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <body>
-	<header>
+	<header data-th-fragment="header">
 		<!-- header top start -->
 		<div class="header-top-area bg-gray text-center text-md-left">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-5">
-						<div class="header-call-action">
-							<i class="fa fa-envelope"></i> 没有邮箱，被骗了不用联系我
-							<a></a>
-							<i class="fa fa-phone"></i> 美女可以给我打电话，不是美女不用给我打电话
-							<a></a>
-						</div>
-					</div>
+					<div class="col-lg-6 col-md-5"></div>
 					<div class="col-lg-6 col-md-7">
 						<div class="header-top-right float-md-right float-none">
 							<nav>
 								<ul>
 									<li id="loginbar" style="margin-right: 15px;">
-										<a href="http://localhost:8080/login-register">请登录</a>
+										<a href="http://sso.view.solarcat.cn/login">请登录</a>
 									</li>
 									<li>
-										<a href="http://localhost:8080/login-register">免费注册</a>
+										<a href="http://sso.view.solarcat.cn/register">免费注册</a>
 									</li>
 									<li>
 										<div class="dropdown header-top-dropdown">
