--- a/cart-web/src/main/resources/templates/411.html
+++ b/cart-web/src/main/resources/templates/411.html
@@ -70,10 +70,10 @@
 											<div class="myaccount-content">
 												<h3>帐户信息中心</h3>
 												<div class="welcome">
-													<p>你好, <strong>Alex Tuntuni</strong> (如果不是<strong>Tuntuni !</strong><a href="login-register.html" class="logout"> 请退出</a>)
-													</p>
+													<p>你好,您的登录已过期或未登录。请重新登录后重试。</p>
 												</div>
-												<p class="mb-0">来自您的帐户信息中心。您可以轻松查看和查看最近的订单，管理您的送货和帐单地址，以及修改密码和帐户详细信息。</p>
+												<p class="mb-0">来自您的帐户信息中心:如果您拥有账号，您可以点击<a href="http://sso.view.solarcat.cn/login">登录</a>登录</p>
+												<p class="mb-0">如果您未拥有账号，您可以点击<a href="http://sso.view.solarcat.cn/register">注册</a>先注册后登录</p>
 											</div>
 										</div>
 										<!-- Single Tab Content End -->
