--- a/cart-web/src/main/resources/templates/payment.html
+++ b/cart-web/src/main/resources/templates/payment.html
@@ -13,10 +13,8 @@
 <link href="/css/font-awesome.min.css" rel="stylesheet">
 <!-- helper class css -->
 <link href="/css/helper.min.css" rel="stylesheet">
-<!-- Plugins CSS -->
-<link href="/css/plugins.css" rel="stylesheet">
 <!-- Main Style CSS -->
-<link href="/css/style.css" rel="stylesheet">
+<link href="/css/solar.css" rel="stylesheet">
 </head>
 <body>
 	<div class="wrapper">
