--- a/search-web/src/main/resources/templates/header.html
+++ b/search-web/src/main/resources/templates/header.html
@@ -22,6 +22,9 @@
 										<a href="http://sso.view.solarcat.cn/register">免费注册</a>
 									</li>
 									<li>
+										<a href="http://localhost:9005/cart/cart">购物车</a>
+									</li>
+									<li>
 										<div class="dropdown header-top-dropdown">
 											<a class="dropdown-toggle" id="myaccount" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 												我的账户 <i class="fa fa-angle-down"></i>
